--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,27 +19,27 @@ services:
       - mysql-data:/var/lib/mysql
     command: --default-authentication-plugin=mysql_native_password
 
-  backend:
-    build:
-      context: ./
-      dockerfile: Dockerfile
-    environment:
-      - NODE_ENV=production
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - MYSQL_HOST=mysql
-      - MYSQL_PORT=3306
-      - MYSQL_DATABASE=${MYSQL_DATABASE:-lowcodeapi}
-      - MYSQL_USER=${MYSQL_USER:-lowcodeapi}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-lowcodeapi}
-      - PORT=${PORT:-3000}
-    env_file:
-      - .env
-    ports:
-      - "${PORT:-3000}:${PORT:-3000}"
-    depends_on:
-      - redis
-      - mysql
+  # backend:
+  #   build:
+  #     context: ./server
+  #     dockerfile: Dockerfile
+  #   environment:
+  #     - NODE_ENV=production
+  #     - REDIS_HOST=redis
+  #     - REDIS_PORT=6379
+  #     - MYSQL_HOST=mysql
+  #     - MYSQL_PORT=3306
+  #     - MYSQL_DATABASE=${MYSQL_DATABASE:-lowcodeapi}
+  #     - MYSQL_USER=${MYSQL_USER:-lowcodeapi}
+  #     - MYSQL_PASSWORD=${MYSQL_PASSWORD:-lowcodeapi}
+  #     - PORT=${PORT:-3000}
+  #   env_file:
+  #     - ./server/.env
+  #   ports:
+  #     - "${PORT:-3000}:${PORT:-3000}"
+  #   depends_on:
+  #     - redis
+  #     - mysql
 
 volumes:
   redis-data:
