updates docker compose file

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
-# Required for docker compose
 SERVER_PORT=3456
+DB_TYPE=mysql
+
+DB_HOST=mysql # for docker compose
+DB_PORT=3306
+DB_NAME=
+DB_USER=
+DB_PASS=
+
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+# MySQL container environment variables
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
