--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "lint:fix": "eslint src --fix",
     "format": "prettier --write \"src/**/*.{js,ts,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{js,ts,json,md}\"",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "create": "node setup/create-user.js"
   },
   "dependencies": {
     "@aws-crypto/sha256-js": "^4.0.0",
