--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     image: mysql:8.0
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-rootpassword}
-      - MYSQL_DATABASE=${MYSQL_DATABASE:-testdb}
-      - MYSQL_USER=${MYSQL_USER:-testuser}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-testpwd}
+      - MYSQL_DATABASE=${MYSQL_DATABASE:-lowcodeapi}
+      - MYSQL_USER=${MYSQL_USER:-lowcodeapi}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-lowcodeapi}
     ports:
       - "3306:3306"
     volumes:
