Cleaup up of legacy and cloud instance.

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,60 +1,37 @@
-NEXTJS_PROD_BUILD_PATH
-
-JWT_SECRET=
-JWT_EXPIRES=
-
-REDIS_ENABLED=
-REDIS_KEY_EXPIRY=
-CHECKOUT_WAIT_RATE_LIMIT=
-SERVICE_DOMAIN=
-
-PRODUCT=
-
-MAIN_SERVER_HOST=
-PLATFORM_SERVER_HOST=
-
-INTERNAL_BASE_PATH=
-PROTOCOL=
-PLATFORM_PORT=
-DOMAIN_PORT=
-MOUNT_POINT=
-AUTH_MOUNT_POINT=
-
-ALLOWED_METHODS=
-MAIN_KEY_LOOKUP=
-METHOD_TYPE_KEY=
-DATA_FILTER=
-
 DB_TYPE=mysql
-
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=lowcodeapi
 DB_USER=lowcodeapi
 DB_PASS=lowcodeapi
 
+REDIS_HOST=localhost
+REDIS_PORT=6379
+SESSION_STORE_IN_REDIS="YES"
+
+PROTOCOL=http
+PORT=3456
+
+APP_DOMAIN=localhost:3456
+API_ENDPOINT=localhost:3456
+UI_DOMAIN=localhost:3000
+MOUNT_POINT=/api/v1
+AUTH_MOUNT_POINT=/auth
+
+#Keep BASE_PATH empty
+BASE_PATH=
+
+# Rate limit for API
+RATE_LIMIT_WINDOW_IN_MS=60000
+RATE_LIMIT_MAX_REQUEST=2
+
+JWT_EXPIRES=7d
+SESSION_EXPIRY=8640000
+
+ENCRYPTION_KEY=
+JWT_SECRET=
+SESSION_SECRET_KEY=
+
+# Required for Google login
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-
-GMAIL_CLIENT_ID=
-GMAIL_CLIENT_SECRET=
-
-TWITTER_OAUTH1_API_KEY=
-TWITTER_OAUTH1_API_SECRET=
-
-ADMIN_ACCESS_KEYS=
-ADMIN_ACCESS_KEY=
-API_CHACHE_DURATION=
-API_ROUTE_LIST_CACHE_KEY=
-
-RATE_LIMIT_WINDOW_IN_MS_FOR_TOKEN=
-RATE_LIMIT_MAX_REQUEST_FOR_TOKEN=
-RATE_LIMIT_WINDOW_IN_MS=
-RATE_LIMIT_MAX_REQUEST=
-
-DEFAULT_API_DATA_LIMIT=
-API_REQUEST_LOG_KEY=
-
-AIRTABLE_API_KEY=
-
-API_TOKEN=
