--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,7 +17,20 @@ services:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
-    command: --default-authentication-plugin=mysql_native_password
+    command: --default-authentication-plugin=caching_sha2_password
+
+  backend:
+    build:
+      context: ../server
+      dockerfile: Dockerfile
+    env_file:
+      - ../server/.env
+      - .env
+    ports:
+      - ${SERVER_PORT:-3001}:${SERVER_PORT:-3001}
+    depends_on:
+      - redis
+      - mysql
 
 volumes:
   redis-data:
