Adds warning for ENCRYPTION_KEY not to be updated once application is in use.

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,8 @@
+# WARNING: Encription key is used to encrypt and decrypt 3rd party credentials, do not change it once you have started the application.
+# Make sure to set a strong encryption key and has a backup of it.
+ENCRYPTION_KEY=
+
+
 DB_TYPE=mysql
 DB_HOST=localhost
 DB_PORT=3306
@@ -28,7 +33,6 @@ RATE_LIMIT_MAX_REQUEST=2
 JWT_EXPIRES=7d
 SESSION_EXPIRY=8640000
 
-ENCRYPTION_KEY=
 JWT_SECRET=
 SESSION_SECRET_KEY=
 
