--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon --exec ts-node src/bin/www.ts",
-    "start": "nodemon dist/bin/www",
-    "build": "rimraf dist && tsc --project . && rimraf dist/public && mkdirp dist/public && cp -r src/public/* dist/public && npm run postbuild",
+    "server/dev": "nodemon --exec ts-node server/src/bin/www.ts",
+    "server/build": "rimraf server/dist && tsc --project server && rimraf server/dist/public && mkdirp server/dist/public && cp -r server/src/public/* server/dist/public && npm run postbuild",
+    "server/start": "nodemon server/dist/bin/www",
+    "web/dev": "next dev ui",
+    "web/build": "next build ui",
+    "web/start": "next start ui",
+    "start": "npm run server/start && npm run web/start",
     "postbuild": "npm run copy_html",
-    "copy_html": "mkdirp dist/core/template/html && cp -r src/core/template/html/* dist/core/template/html",
+    "copy_html": "mkdirp server/dist/core/template/html && cp -r server/src/core/template/html/* server/dist/core/template/html",
     "lint": "eslint \"src/**/*.{js,ts}\"",
     "lint:fix": "eslint src --fix",
     "format": "prettier --write \"src/**/*.{js,ts,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{js,ts,json,md}\"",
     "test": "jest --coverage",
-    "create": "node setup/create-user.js",
-    "env": "node setup/env-seed.js"
+    "env": "node setup/env-seed.js",
+    "create": "node setup/create-user.js"
   },
   "dependencies": {
     "@aws-crypto/sha256-js": "^4.0.0",
@@ -24,7 +28,6 @@
     "@aws-sdk/s3-request-presigner": "^3.335.0",
     "@aws-sdk/signature-v4": "^3.342.0",
     "@types/mime-types": "^2.1.1",
-    "axios": "^0.27.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.37.2",
     "compression": "^1.7.4",
@@ -40,7 +43,6 @@
     "form-data": "^4.0.0",
     "http-errors": "^2.0.0",
     "i": "^0.3.7",
-    "inflection": "^2.0.1",
     "jsonwebtoken": "^9.0.0",
     "liquid": "^5.1.1",
     "lodash": "^4.17.21",
@@ -58,7 +60,6 @@
     "passport-oauth2": "^1.6.1",
     "passport-trello": "^1.1.0",
     "pm2": "^5.4.3",
-    "qs": "^6.11.0",
     "randomatic": "^3.1.1",
     "randomize": "^0.0.4",
     "redis": "^3.0.2",
@@ -67,7 +68,39 @@
     "sqlite3": "^5.1.7",
     "uuid": "^8.3.2",
     "uuidv7": "^1.0.0",
-    "xml2js": "^0.5.0"
+    "xml2js": "^0.5.0",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.1.4",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "codemirror": "^5.x",
+    "downshift": "^7.6.0",
+    "human-format": "^1.2.0",
+    "local-storage": "^2.0.0",
+    "md5": "^2.3.0",
+    "next": "^15.1.7",
+    "postcss": "8.4.24",
+    "qs": "^6.11.2",
+    "query-string": "^8.1.0",
+    "react": "18.2.0",
+    "react-codemirror2": "^8.0.1",
+    "react-data-table-component": "^7.6.2",
+    "react-dom": "18.2.0",
+    "react-h5-audio-player": "^3.10.0-rc.1",
+    "react-highlight": "^0.15.0",
+    "react-icons": "^5.2.1",
+    "react-json-view": "^1.21.3",
+    "react-markdown": "^8.0.7",
+    "react-rnd": "^10.5.2",
+    "react-select": "^5.7.3",
+    "react-split-pane": "^0.1.92",
+    "react-tooltip": "^5.27.0",
+    "remark-frontmatter": "^4.0.1",
+    "sharp": "^0.34.4",
+    "styled-components": "^6.1.15",
+    "tailwindcss": "3.4.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -102,8 +135,9 @@
     "@types/xml2js": "^0.4.11",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
-    "eslint": "^8.12.0",
+    "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-next": "^13.4.4",
     "eslint-plugin-import": "^2.32.0",
     "javascript-obfuscator": "^4.0.2",
     "jest": "^29.7.0",
