--- a/package.json
+++ b/package.json
@@ -27,9 +27,17 @@
     "@aws-sdk/protocol-http": "^3.342.0",
     "@aws-sdk/s3-request-presigner": "^3.335.0",
     "@aws-sdk/signature-v4": "^3.342.0",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.1.4",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@microlink/react-json-view": "^1.27.0",
     "@types/mime-types": "^2.1.1",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.37.2",
+    "codemirror": "^5.x",
     "compression": "^1.7.4",
     "connect-redis": "^5.0.0",
     "cookie-parser": "^1.4.4",
@@ -37,22 +45,27 @@
     "crypto-js": "^4.1.1",
     "debug": "^4.4.1",
     "dotenv": "^16.0.0",
+    "downshift": "^7.6.0",
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.1",
     "form-data": "^4.0.0",
     "http-errors": "^2.0.0",
+    "human-format": "^1.2.0",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.0",
     "liquid": "^5.1.1",
+    "local-storage": "^2.0.0",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.1",
+    "md5": "^2.3.0",
     "mime-types": "^2.1.35",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.1",
     "nanoid": "^3.1.10",
+    "next": "^15.1.7",
     "oauth": "^0.9.15",
     "oauth-sign": "^0.9.0",
     "passport": "^0.4.1",
@@ -60,30 +73,11 @@
     "passport-oauth2": "^1.6.1",
     "passport-trello": "^1.1.0",
     "pm2": "^5.4.3",
-    "randomatic": "^3.1.1",
-    "randomize": "^0.0.4",
-    "redis": "^3.0.2",
-    "sequelize": "^6.29.3",
-    "shortid": "^2.2.16",
-    "sqlite3": "^5.1.7",
-    "uuid": "^8.3.2",
-    "uuidv7": "^1.0.0",
-    "xml2js": "^0.5.0",
-    "@headlessui/react": "^1.7.14",
-    "@heroicons/react": "^2.1.4",
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "codemirror": "^5.x",
-    "downshift": "^7.6.0",
-    "human-format": "^1.2.0",
-    "local-storage": "^2.0.0",
-    "md5": "^2.3.0",
-    "next": "^15.1.7",
     "postcss": "8.4.24",
     "qs": "^6.11.2",
     "query-string": "^8.1.0",
+    "randomatic": "^3.1.1",
+    "randomize": "^0.0.4",
     "react": "18.2.0",
     "react-codemirror2": "^8.0.1",
     "react-data-table-component": "^7.6.2",
@@ -91,16 +85,22 @@
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-highlight": "^0.15.0",
     "react-icons": "^5.2.1",
-    "react-json-view": "^1.21.3",
     "react-markdown": "^8.0.7",
     "react-rnd": "^10.5.2",
     "react-select": "^5.7.3",
     "react-split-pane": "^0.1.92",
     "react-tooltip": "^5.27.0",
+    "redis": "^3.0.2",
     "remark-frontmatter": "^4.0.1",
+    "sequelize": "^6.29.3",
     "sharp": "^0.34.4",
+    "shortid": "^2.2.16",
+    "sqlite3": "^5.1.7",
     "styled-components": "^6.1.15",
-    "tailwindcss": "3.4.1"
+    "tailwindcss": "3.4.1",
+    "uuid": "^8.3.2",
+    "uuidv7": "^1.0.0",
+    "xml2js": "^0.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
