--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "react-markdown": "^8.0.7",
     "react-rnd": "^10.5.2",
     "react-select": "^5.7.3",
-    "react-split-pane": "^0.1.92",
+    "react-split": "^2.0.14",
     "react-tooltip": "^5.27.0",
     "redis": "^3.0.2",
     "remark-frontmatter": "^4.0.1",
